src/components/Popup/Popup.module.css
.holder {
    position: fixed;
    left: 50%;
    transform: translateX(-50%);
    bottom: 2%;
    width: 100%;
    max-width: 1920px;
    height: 1px;
    padding: 0 5%;
    z-index: 5;
}

.popup {
    position: relative;
    bottom: 0;
    transform: translateY(-100%);
    width: 100%;
    max-width: 650px;
    padding: 40px 50px 20px 50px;
    background-color: #416780;
    border-radius: 25px;
    
}

.text {
    font-family: 'League Spartan', sans-serif;
    font-weight: 400;
    font-size: 19px;
    line-height: 120%;
    color: white;
    margin-bottom: 20px;
    width: 95%;
    
}
.box {
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

.btn {
    font-family: 'League Spartan', sans-serif;
    font-weight: 500;
    -ms-flex-item-align: end;
        align-self: flex-end;
    font-size: 18px;
    background-color: white;
    padding: 15px 45px;
    text-decoration: none;
    border-radius: 45px;
    -webkit-transition: .3s;
    -o-transition: .3s;
    transition: .3s;
    margin-top: 15px;
    border: none;
    cursor: pointer;

    
}

.btn:hover {
    background-color: lightgray
}

.close {
    position: absolute;
    top: 20px;
    right: 20px;
    border: none;
    background-color: transparent;
    cursor: pointer;
}

@media (max-width: 550px) {
    .popup {
        padding: 40px 35px 20px 35px
    }
  }

